We also need ffmpeg now. Thanks Apple

--- a/install/Dockerfile
+++ b/install/Dockerfile
@@ -1,4 +1,5 @@
 FROM docker.io/almalinux/9-minimal
 
 RUN microdnf update -y
-RUN microdnf install -y ImageMagick ImageMagick-devel espeak-ng python3-pip mariadb mariadb-server mariadb-devel nginx rsync 
+# Install EPEL Repo
+RUN microdnf install -y ImageMagick ImageMagick-devel espeak-ng python3-pip mariadb mariadb-server mariadb-devel nginx rsync ffmpeg-free 
